Decrease min-width to prevent wrapping of uniform inputs

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ h2 {
 
 .row-group-container .input-group {
     flex: 1;
-    min-width: 150px;
+    min-width: 80px;
 }
 
 .input-group label {
